panel_info spacing fix

--- a/assets/_scss/_homeless-analysis.scss
+++ b/assets/_scss/_homeless-analysis.scss
@@ -309,7 +309,7 @@
     background-color: inherit;
     min-height: 255px;
     margin-left: 10px;
-    margin-top: -25px;
+    margin-top: -10px;
   }
 
   #panel_coc {
